# multi-forge

./: .dockerignore  .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.agents/skills/gather-context/: SKILL.md
.agents/skills/refactor-audit/: SKILL.md
.agents/skills/simplicity-audit/: SKILL.md
.claude/commands/: gather-context.md  refactor_audit.md  simplicity_audit.md
.github/: pull_request_template.md  set-policies.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yaml  publish.yml  test.yaml
docker/: Dockerfile.forge  Dockerfile.sidecar  entrypoint.sh
docs/: auth_cost_metric.md  cli_reference.md  design.md  design_appendix.md  design_workflows.md  diagrams.md  usability_issues.md
docs/board/: README.md  change_log.md  impl_notes.md
docs/developer/: README.md  board-contract.md  board_contract.md  cli_style_guidelines.md  coding-standards.md  coding_standards.md  documentation-guidelines.md  documentation_guidelines.md  testing-guidelines.md  testing_guidelines.md  work-board-contract.md
docs/discussions/: pr_8_review_map.md
docs/end-user/: README.md  auth.md  authentication.md  config.md  configs.md  handoff.md  hook.md  hooks.md  manual-testing.md  manual_testing.md  memory.md  model-selection.md  model_selection.md  policies.md  policy.md  proxies.md  proxy.md  search.md  session.md  sessions.md  skills.md  transfer.md  workflow.md  workflows.md
docs/proposals/: memory_enhancement.md  runtime_abstraction.md
docs/status/: README.md  change_log.md  checklist.md  impl_notes.md
scripts/: count-tokens.py  setup.sh  sync-walkthrough-state.py  test-integration.sh
scripts/experiments/claude-subscription/: README.md  lib.sh  reproduce.sh  sanitize.sh
scripts/experiments/codex-hooks/: README.md  lib.sh  reproduce.sh  sanitize.sh
scripts/experiments/codex-skills/: README.md  lib.sh  reproduce.sh
scripts/experiments/headless-cost-report/: README.md  reproduce.sh
scripts/experiments/hook-dispatcher/: benchmark.py
scripts/experiments/native-resume/: README.md  reproduce.sh
scripts/experiments/openrouter/: README.md  lib.sh  reproduce.sh  sanitize.sh
src/forge/: __init__.py  runtime_config.py
src/forge/backend/: __init__.py  creation.py  registry.py  sources.py
src/forge/cli/: __init__.py  activity.py  auth.py  backend.py  claude.py  codex.py  config_cmd.py  consumer_lane_freeze.py  editor.py  extensions.py  gc.py  guard.py  guards.py  handoff.py  launch_confirmation.py  logs.py  main.py  memory.py  memory_report.py  memory_writer.py  model.py  output.py  policy.py  provider.py  proxy.py  proxy_audit.py  proxy_costs.py  runtime.py  search.py  session.py  session_codex.py  session_fork.py  session_handoff.py  session_lane.py  session_lifecycle.py  session_manage.py  session_memory.py  session_model_pin.py  session_resume_modes.py  session_rewind.py  (+8 more)
src/forge/config/: __init__.py  dataclass_utils.py  loader.py  schema.py
src/forge/core/: __init__.py  backend_dependency.py  credential_registry.py  effort.py  lanes.py  logging.py  naming.py  paths.py  process.py  provider_types.py  run_id.py  runtime_vocab.py  tiers.py  transcript.py  typing_helpers.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  codex_result.py  docker.py  proxy.py  repos.py  test_docker_helpers.py  test_docker_revision.py  transcript_sample.jsonl
tests/regression/: __init__.py  test_bug_20260719_unmanaged_skill_leak.py  test_bug_214_hyperparams_defaults.py  test_bug_219_server_startup_graceful.py  test_bug_21x_fork_launch_handoff.py  test_bug_21x_handoff_output_root.py  test_bug_220_proxy_deps_check.py  test_bug_4g_mixed_stamped_unstamped_undercount.py  test_bug_55_tier_override_truthiness.py  test_bug_adopted_proxy_delete.py  test_bug_audit_drift_baseline_downgrade.py  test_bug_audit_header_redaction_no_leak.py  test_bug_augment_cache_aware_insertion.py  test_bug_auth_retry_provider_trace.py  test_bug_backend_delete_double_stop.py  test_bug_backend_reconcile_malformed_200.py  test_bug_blocked_action_persists_policy_state.py  test_bug_cap_mode_removed_key_rejected.py  test_bug_cap_preflight_wrong_model.py  test_bug_caps_spend_cap_regressions.py  test_bug_claude_print_helper_exit_code.py  test_bug_cleanup_glob_dataloss.py  test_bug_codex_config_atomic_write_mode.py  test_bug_codex_dedupe_wrong_event.py  test_bug_codex_empty_error_message.py  test_bug_codex_enrollment_wrong_event.py  test_bug_codex_fork_orphan.py  test_bug_codex_resolve_corrupt_manifest.py  test_bug_codex_runtime_error_exit0.py  test_bug_codex_skills_probe_false_negative.py  test_bug_codex_staged_context_reread.py  test_bug_codex_tdd_nested_layout.py  test_bug_codex_tracking_lost_on_unavailable.py  test_bug_consumer_lane_fork_resume_inherit.py  test_bug_consumer_lane_stale_freeze_after_remove.py  test_bug_context_window_int_crash.py  test_bug_corrupt_manifest_not_gc_orphaned.py  test_bug_cost_header_evidence.py  test_bug_cost_log_non_dict_line.py  test_bug_cost_logger_schema_version.py  (+101 more)
tests/src/: __init__.py  test_conformance.py  test_runtime_config.py
(+1190 files in other folders)
