[project]
name = "multi-forge"
version = "0.3.0"
description = "Multi-runtime agent toolkit: proxy routing, cost control, session management, policy enforcement, and workflow orchestration"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Habib Farr", email = "hapali@pm.me" },
]
# `uvloop` is pulled in transitively via `litellm[proxy]` and has no cp314 wheel
# at time of writing; building from source fails on macOS. Lift the upper bound
# once uvloop ships 3.14 wheels. See https://github.com/hapa1i/multi-forge/issues/1
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]

dependencies = [
    "dacite>=1.8.0",
    "click>=8.3.1",
    "coolname>=5.0.0,<6",
    "rich>=13.9.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "packaging>=21.0",
    # Proxy dependencies (previously optional, now core).
    # Plain `fastapi` (no `[standard]` extras): Forge uses none of websockets/
    # uvloop/httptools/multipart/jinja2. `watchfiles` is declared explicitly
    # because Forge owns `--reload` (`forge proxy server --reload`).
    "fastapi>=0.115.14",
    "uvicorn>=0.31.1",
    "watchfiles>=0.20",
    "litellm[proxy]>=1.85.0",
]

[project.scripts]
forge = "forge.cli.main:main"

[project.urls]
Homepage = "https://github.com/hapa1i/multi-forge"
Repository = "https://github.com/hapa1i/multi-forge"
Issues = "https://github.com/hapa1i/multi-forge/issues"
Documentation = "https://github.com/hapa1i/multi-forge/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

# Include non-Python data files (YAML catalogs, etc.) in the wheel
[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Bundle extension files (skills, agents, commands) into the wheel.
# These live outside src/forge/ in the repo but must be accessible from
# a wheel install for `forge extension enable` to work.
[tool.hatch.build.targets.wheel.force-include]
"src/skills" = "forge/_extensions/skills"
"src/agents" = "forge/_extensions/agents"
"src/commands" = "forge/_extensions/commands"

[tool.hatch.build]
include = [
    "src/forge/**/*.py",
    "src/forge/**/*.yaml",
    "src/forge/**/*.md",
    # Extensions are bundled into wheels via force-include above; they must
    # also be included here so source distributions ship them. Without this,
    # `pip install --no-binary=:all:` (or anyone building from sdist) would
    # produce a wheel missing all extensions.
    "src/skills/**",
    "src/agents/**",
    "src/commands/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (require network/API access, deselect with '-m \"not slow\"')",
    "remote_litellm: marks tests that require remote/shared LiteLLM infrastructure",
    "regression: marks tests as regression/bug-fix tests (run with '-m regression')",
    "docker_in: tests that exec commands inside a container (use '-m \"not docker_in\"' to skip)",
    "docker_host: tests that spawn containers from host - sandbox tests (use '-m \"not docker_host\"' to skip)",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"

[tool.mypy]
# Same-named standalone scripts in separate skill directories collide in mypy's
# module map during broad scans. Keep this exclusion local to the duplicate
# script name; it is not a source-of-truth relationship between the skills.
exclude = [
    'src/skills/qa/scripts/walkthrough-state\.py$',
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# Security floor for transitive dependencies (Dependabot alerts)
[tool.uv]
constraint-dependencies = [
    "filelock>=3.20.3",
    "virtualenv>=20.36.1",
    "aiohttp>=3.14.0",
    "cryptography>=46.0.7",
    "python-multipart>=0.0.26",
    "Pygments>=2.20.0",
]
# litellm pins fastapi-sso<0.17.0 but 0.16.x has a CSRF vulnerability.
# Forge doesn't use fastapi-sso directly; override to force the patched version.
override-dependencies = [
    "fastapi-sso>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "black>=26.5.0",
    "mypy>=1.13.0",
    "pyright>=1.1.0",
    "pytest-rerunfailures>=14.0",
    "pre-commit>=4.5.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "python-dotenv>=1.2.1",
]
provider-check = [
    "anthropic>=0.100.0",
    "google-genai>=2.5.0",
    "openai>=2.0.0",
    "tiktoken>=0.12.0",
]
